--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,12 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
     "react-hook-form": "^6.15.4",
     "sendmail": "^1.6.1",
     "sequelize": "^6.5.0"
