--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-color": "^2.19.3",
     "react-date-object": "^1.2.6",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-export-excel": "^0.5.3",
     "react-hook-form": "^6.15.4",
     "react-modal": "^3.12.1",
