--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-generator": "^4.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
@@ -22,5 +25,9 @@
     "react-hook-form": "^6.15.4",
     "sendmail": "^1.6.1",
     "sequelize": "^6.5.0"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.1",
+    "nodemon": "^2.0.7"
   }
 }
