--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "express-generator": "^4.16.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
