--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "downloadjs": "^1.4.7",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.33.2",
@@ -24,6 +25,7 @@
     "react-dropzone": "^11.3.2",
     "react-export-excel": "^0.5.3",
     "react-hook-form": "^6.15.4",
+    "react-html-table-to-excel": "^2.0.0",
     "react-modal": "^3.12.1",
     "react-native": "^0.64.0",
     "react-pro-sidebar": "^0.6.0",
