--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,5 +1,18 @@
 version: '3'
 services:
+  db-test:
+    image: mysql:latest
+    container_name: mysql_server
+    environment:
+      MYSQL_USER: user
+      MYSQL_PASSWORD: pass
+      MYSQL_ROOT_PASSWORD: pass
+      MYSQL_DATABASE: restapi
+    volumes:
+      - ./init-mysql:/docker-entrypoint-initdb.d
+    restart: always
+    ports:
+      - 3306:3306
   mysql:
     image: mysql:latest
     container_name: mysql_server
