--- a/client/package.json
+++ b/client/package.json
@@ -8,15 +8,16 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
     "bootstrap": "^4.6.0",
     "downloadjs": "^1.4.7",
+    "faker": "^5.5.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "puppeteer": "^9.1.1",
     "react": "^17.0.1",
     "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^1.5.2",
@@ -37,13 +38,16 @@
     "react-test-renderer": "^17.0.2",
     "sweetalert2": "^10.15.6",
     "sweetalert2-react-content": "^3.3.1",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "formik": "^1.4.2",
+    "history": "^4.7.2",
+    "rxjs": "^6.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "cross-env NODE_ENV=test jest --testTimeout=10000"
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -65,13 +69,15 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "jest": "^26.6.3",
-    "supertest": "^6.1.3"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "supertest": "^6.1.3",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "webpack": "^4.15.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.3"
   }
 }
