--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test" : "jest"
+    "test": "jest --collectCoverage"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -23,6 +24,7 @@
     "mysql2": "^2.2.5",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
+    "puppeteer": "^9.1.1",
     "react-hook-form": "^6.15.4",
     "sendmail": "^1.6.1",
     "sequelize": "^6.5.0"
