--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "@material-ui/core": "^4.11.3",
@@ -12,9 +13,12 @@
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
     "downloadjs": "^1.4.7",
     "faker": "^5.5.3",
+    "formik": "^1.4.2",
+    "history": "^4.7.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "puppeteer": "^9.1.1",
@@ -36,18 +40,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-test-renderer": "^17.0.2",
+    "rxjs": "^6.3.3",
     "sweetalert2": "^10.15.6",
     "sweetalert2-react-content": "^3.3.1",
-    "web-vitals": "^1.1.0",
-    "formik": "^1.4.2",
-    "history": "^4.7.2",
-    "rxjs": "^6.3.3"
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "jest --collectCoverage"
   },
   "eslintConfig": {
     "extends": [
